# RIoT-Broadband

./: CMakeLists.txt  README.md  riotinterface.service
recipe/riotInterface/: riotInterface_git.bb  riotinterface.bb
riotInterface/: CMakeLists.txt  RIoTInterface.c  RIoTInterface.cpp
